Bug 271156 - dolphin open home directory instead of the mounted crypted file system
Summary: dolphin open home directory instead of the mounted crypted file system
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 264855 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-17 15:01 UTC by Giovanni Venturi
Modified: 2011-12-04 09:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giovanni Venturi 2011-04-17 15:01:43 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

I connect a crypted disk to the USB port. KDE tell me a new UBD disk device connected. I click on the icon, KDE ask me the password to decrypt the file system. I give the correct password and KDE opens dolphin on the home directory instead of the mounted crypted file system.

Reproducible: Always

Steps to Reproduce:
I connect a crypted disk to the USB port. KDE tell me a new UBD disk device connected. I click on the icon, KDE ask me the password to decrypt the file system. I give the correct password and KDE opens dolphin on the home directory instead of the mounted crypted file system.

Actual Results:  
Show the the wrong directory

Expected Results:  
show the directory of the decrypted file system

OS: Linux (i686) release 2.6.38-ARCH
Compiler: gcc
Comment 1 Ozan Çağlayan 2011-04-19 15:41:28 UTC
I think it happens on the first
 plug/click/provide passphrase/open-in-dolphin

sequence. After it is mounted, I can correctly open it in Dolphin. Can you try this?
Comment 2 Giovanni Venturi 2011-04-19 18:46:06 UTC
Yes, after I gave the password If I click on my own on the icon disk from Dolphin I can point to the decrypted file system and do all the file system operations.
Comment 3 Lukáš Tinkl 2011-04-21 15:15:49 UTC
Fixed in 4.6.3, revision 6315b732cd8c775892d442c5709349e0f66d1f12
Comment 4 Aaron J. Seigo 2011-12-04 09:52:38 UTC
*** Bug 264855 has been marked as a duplicate of this bug. ***