Really wait until the slave filesystem is really mounted

Backport:
When you first attempt to mount an encrypted container and provide
the passphrase, udisks doesn't correctly wait for mount completion.

Fix this so that dolphin points the mounted slave filesystem instead
of the Home directory.

REVIEW:101160
BUG:271156
FIXED-IN:4.6.3
(cherry picked from commit bdf3cc8ac328e907e88de36d698bba6a7f0e2c7f)